--- a/.github/workflows/firebase-deployment.yml
+++ b/.github/workflows/firebase-deployment.yml
@@ -18,6 +18,9 @@ jobs:
 
       - name: Run Tests
         run: npm run test
+        env:
+          VITE_SUPABASE_URL: ${{ secrets.VITE_SUPABASE_URL }}
+          VITE_SUPABASE_ANON_KEY: ${{ secrets.VITE_SUPABASE_ANON_KEY }}
 
       - name: Build
         run: npm run build
